; ModuleID = '/home/carl/AnghaBench/lede/tools/firmware-utils/src/extr_mkcsysimg.c_csum16_update.c'
source_filename = "/home/carl/AnghaBench/lede/tools/firmware-utils/src/extr_mkcsysimg.c_csum16_update.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.csum_state = type { i32, i32, i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @csum16_update(i32* %0, i32 %1, %struct.csum_state* %2) #0 {
  %4 = alloca i32*, align 8
  %5 = alloca i32, align 4
  %6 = alloca %struct.csum_state*, align 8
  %7 = alloca i32, align 4
  store i32* %0, i32** %4, align 8
  store i32 %1, i32* %5, align 4
  store %struct.csum_state* %2, %struct.csum_state** %6, align 8
  %8 = load %struct.csum_state*, %struct.csum_state** %6, align 8
  %9 = getelementptr inbounds %struct.csum_state, %struct.csum_state* %8, i32 0, i32 0
  %10 = load i32, i32* %9, align 4
  %11 = icmp ne i32 %10, 0
  br i1 %11, label %12, label %35

12:                                               ; preds = %3
  %13 = load %struct.csum_state*, %struct.csum_state** %6, align 8
  %14 = getelementptr inbounds %struct.csum_state, %struct.csum_state* %13, i32 0, i32 1
  %15 = load i32, i32* %14, align 4
  %16 = load i32*, i32** %4, align 8
  %17 = getelementptr inbounds i32, i32* %16, i64 0
  %18 = load i32, i32* %17, align 4
  %19 = shl i32 %18, 8
  %20 = add nsw i32 %15, %19
  store i32 %20, i32* %7, align 4
  %21 = load i32, i32* %7, align 4
  %22 = call i64 @LE16_TO_HOST(i32 %21)
  %23 = load %struct.csum_state*, %struct.csum_state** %6, align 8
  %24 = getelementptr inbounds %struct.csum_state, %struct.csum_state* %23, i32 0, i32 2
  %25 = load i32, i32* %24, align 4
  %26 = sext i32 %25 to i64
  %27 = add nsw i64 %26, %22
  %28 = trunc i64 %27 to i32
  store i32 %28, i32* %24, align 4
  %29 = load %struct.csum_state*, %struct.csum_state** %6, align 8
  %30 = getelementptr inbounds %struct.csum_state, %struct.csum_state* %29, i32 0, i32 0
  store i32 0, i32* %30, align 4
  %31 = load i32, i32* %5, align 4
  %32 = add nsw i32 %31, -1
  store i32 %32, i32* %5, align 4
  %33 = load i32*, i32** %4, align 8
  %34 = getelementptr inbounds i32, i32* %33, i32 1
  store i32* %34, i32** %4, align 8
  br label %35

35:                                               ; preds = %12, %3
  br label %36

36:                                               ; preds = %56, %35
  %37 = load i32, i32* %5, align 4
  %38 = icmp sgt i32 %37, 1
  br i1 %38, label %39, label %61

39:                                               ; preds = %36
  %40 = load i32*, i32** %4, align 8
  %41 = getelementptr inbounds i32, i32* %40, i64 0
  %42 = load i32, i32* %41, align 4
  %43 = load i32*, i32** %4, align 8
  %44 = getelementptr inbounds i32, i32* %43, i64 1
  %45 = load i32, i32* %44, align 4
  %46 = shl i32 %45, 8
  %47 = add nsw i32 %42, %46
  store i32 %47, i32* %7, align 4
  %48 = load i32, i32* %7, align 4
  %49 = call i64 @LE16_TO_HOST(i32 %48)
  %50 = load %struct.csum_state*, %struct.csum_state** %6, align 8
  %51 = getelementptr inbounds %struct.csum_state, %struct.csum_state* %50, i32 0, i32 2
  %52 = load i32, i32* %51, align 4
  %53 = sext i32 %52 to i64
  %54 = add nsw i64 %53, %49
  %55 = trunc i64 %54 to i32
  store i32 %55, i32* %51, align 4
  br label %56

56:                                               ; preds = %39
  %57 = load i32, i32* %5, align 4
  %58 = sub nsw i32 %57, 2
  store i32 %58, i32* %5, align 4
  %59 = load i32*, i32** %4, align 8
  %60 = getelementptr inbounds i32, i32* %59, i64 2
  store i32* %60, i32** %4, align 8
  br label %36

61:                                               ; preds = %36
  %62 = load i32, i32* %5, align 4
  %63 = icmp eq i32 %62, 1
  br i1 %63, label %64, label %72

64:                                               ; preds = %61
  %65 = load i32*, i32** %4, align 8
  %66 = getelementptr inbounds i32, i32* %65, i64 0
  %67 = load i32, i32* %66, align 4
  %68 = load %struct.csum_state*, %struct.csum_state** %6, align 8
  %69 = getelementptr inbounds %struct.csum_state, %struct.csum_state* %68, i32 0, i32 1
  store i32 %67, i32* %69, align 4
  %70 = load %struct.csum_state*, %struct.csum_state** %6, align 8
  %71 = getelementptr inbounds %struct.csum_state, %struct.csum_state* %70, i32 0, i32 0
  store i32 1, i32* %71, align 4
  br label %72

72:                                               ; preds = %64, %61
  ret void
}

declare dso_local i64 @LE16_TO_HOST(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
